# skim-run

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.githooks/: pre-push
.github/workflows/: release.yml
.zed/: debug.json
src/: apps.rs  calc.rs  cli.rs  hyprctl_clients.rs  hyprctl_hide.rs  lib.rs  main.rs  paru.rs  systemd_services.rs
