[package]
name = "skim-run"
version = "0.3.3"
edition = "2024"
license = "MIT"
description = "An interactive toolbox using skim"
repository = "https://github.com/skim-rs/skim-run"

[features]
apps = ["dep:applications", "dep:viuer", "dep:image", "dep:fork" ]
calc = ["dep:rink-core", "dep:chrono", "dep:reqwest"]
hyprland = ["dep:serde_json", "dep:serde"]
systemd = ["dep:zbus_systemd", "dep:smol"]
paru = []
default = ["apps", "calc", "paru"]

[dependencies]
skim = "0.20.2"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }

# Apps
applications = { version = "0.3.1", optional = true}
viuer = { version = "0.9.2", features = ["print-file"], optional = true }
image = { version = "0.25.6", optional = true }
fork = { version = "0.2.0", optional = true }

# Calc
rink-core = { version = "0.8.0", optional = true, features = ["bundle-files"] }
chrono = { version = "0.4.41", optional = true }
reqwest = { version = "0.12.22", optional = true, features = ["blocking", "json", "rustls-tls"], default-features = false }

# Hyprland
serde_json = { version = "1.0.140", optional = true }
serde = { version = "1.0.219", optional = true, features = ["serde_derive"] }

# Systemd
zbus_systemd = { version = "0.25701.0", features = ["systemd1"], optional = true }
smol = { version = "2.0.2", optional = true }
shlex = "1.3.0"
